--- a/manifest.json
+++ b/manifest.json
@@ -15,6 +15,6 @@
         }
     ],
     "metadata": {
-      "authors": ["Jebbyk", "OpenSauce"]
+      "authors": ["Jebbyk", "OpenSauce", "LSumma"]
     }
 }
